--- a/contact.css
+++ b/contact.css
@@ -328,7 +328,7 @@ body {
 /* ----- Header Container ----- */
 .header-container {
   background: white;
-  padding: 10px 20px;
+  padding: 9px 20px;
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -361,17 +361,18 @@ body {
 }
 
 .logo-text .evolution-word {
-  font-size: 2.3rem;
+  font-size: 2.2rem;
   font-weight: 800;
   color: #fbc02d;
   line-height: 1.2;
 }
 
 .logo-text .career-word {
-  font-size: 1.1rem;
+  font-size: 1.0rem;
   color: #003c71;
   font-weight: 600;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  	margin-top: -1.5px;
 }
 
 /* ----- Desktop Nav Inline ----- */
@@ -387,7 +388,7 @@ body {
   color: #003c71;
   font-weight: 700;
   text-decoration: none;
-  font-size: 1.3rem;
+  font-size: 1.28rem;
   padding: 6px 0;
   transition: 0.3s ease;
 }
@@ -896,7 +897,7 @@ body.menu-open {
   }
 
   .logo-text .evolution-word {
-    font-size: 2.1rem;
+    font-size: 2.0rem;
   }
 
   .logo-text .career-word {
@@ -921,11 +922,12 @@ body.menu-open {
   }
 
   .logo-text .evolution-word {
-    font-size: 2.0rem;
+    font-size: 1.9rem;
   }
 
   .logo-text .career-word {
     font-size: 0.9rem;
+	margin-top: -1.5px;
   }
 
   .mobile-nav a {
@@ -946,11 +948,12 @@ body.menu-open {
   }
 
   .logo-text .evolution-word {
-    font-size: 2.0rem;
+    font-size: 1.9rem;
   }
 
   .logo-text .career-word {
     font-size: 0.9rem;
+	margin-top: -1.5px;
   }
 
   .mobile-nav a {
